# lectures

./: .env  .gitignore  00_pre_requisiet.Rmd  00_pre_requisite.Rmd  00_pre_requisite.html  00_prerequisite.ipynb  01_EDA.ipynb  01_introduce_mimic_dataset.Rmd  02_introduce_R_studio.Rmd  02_introduce_R_studio.pptx  03_introduce_tidyverse_package.Rmd  03_introduce_tidyverse_package.html  04_introduce_ggplot_package.Rmd  04_introduce_ggplot_package.html  04_normalized_lr.ipynb  Q1_ggplot_font.Rmd  Q1_ggplot_font.html  README.md  config.yaml  generator.Rmd  generator.nb.html  main.py  presentation.html  pyproject.toml
20210409_TRD_R_tutorial/: 03_introduce_tidyverse_package.Rmd
20210701_mimiciv_data/: .gitignore  Makefile
20210702_developement_environment_setting/: Makefile
2021_TRD_R_tutorial/: .gitignore  00_pre_requisite.Rmd  00_pre_requisite.html  01_introduce_mimic_dataset.Rmd  02_introduce_R_studio.Rmd  03_introduce_tidyverse_package.html  04_introduce_ggplot_package.Rmd  04_introduce_ggplot_package.html  README.md
20220211_DiveIntoDeepLearning_13-12/: neural_style_민동.ipynb
20220329_python_datascience_lecture/: 02_naive_lr.ipynb  03_feature_engineer_lr.ipynb  pyproject.toml
20220708_DiveIntoDeepLearning_4-10/: .gitignore  Makefile  main.py  pyproject.toml
20220708_DiveIntoDeepLearning_4-10/data/processed/: kfold_output.csv  test_X.pt  train_y.pt
20220708_DiveIntoDeepLearning_4-10/src/: config.py  drawer.py  kfold.py  loss.py  model.py  preprocess.py  train.py
20220708_DiveIntoDeepLearning_4-10/tests/: test_drawer.py
code/: create_dataset.py  (+2 more)
(+42 files in other folders)
